# KimPeanutEngine

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/asset/model/brickwall/: floor.mtl
engine/asset/model/stump/: input.ply
engine/editor/: CMakeLists.txt  main.cpp
engine/editor/include/: editor.h  editor_actor_control_panel.h  editor_global_context.h  editor_imgui_glfw_wsi.h  editor_imgui_opengl_renderer.h  editor_imgui_renderer.h  editor_imgui_vulkan_renderer.h  editor_imgui_wsi.h  editor_input_manager.h  editor_log_manager.h  editor_scene_manager.h  editor_ui.h  editor_ui_component.h  window_system.h
engine/editor/include/editor_ui_component/: editor_button_component.h  editor_camera_component.h  editor_container_component.h  editor_drag_component.h  editor_listbox_component.h  editor_log_component.h  editor_menubar_component.h  editor_plot_component.h  editor_scene_component.h  editor_slider_component.h  editor_text_component.h  editor_tooltip_component.h  editor_window_component.h  eidtor_plot_component.h
engine/editor/src/: editor.cpp  editor_actor_control_panel.cpp  editor_global_context.cpp  editor_imgui_glfw_wsi.cpp  editor_imgui_opengl_renderer.cpp  editor_imgui_vulkan_renderer.cpp  editor_input_mananger.cpp  editor_log_manager.cpp  editor_scene_manager.cpp  editor_ui.cpp  editor_ui_component.cpp  window_system.cpp
engine/editor/src/editor_ui_component/: editor_button_component.cpp  editor_camera_component.cpp  editor_container_component.cpp  editor_listbox_component.cpp  editor_log_component.cpp  editor_menubar_component.cpp  editor_plot_component.cpp  editor_scene_component.cpp  editor_text_component.cpp  editor_tooltip_component.cpp  editor_window_component.cpp
engine/module/: CMakeLists.txt
engine/module/3dgs/: 3dgs_model.h
engine/module/image_process/: image_process_utils.h
engine/module/tts/: CMakeLists.txt  gpt_sovits_tts.cpp  gpt_sovits_tts.h  tts_system.h
engine/platform/: CMakeLists.txt  global.h  global.h.in
engine/platform/path/: path.cpp  path.h
engine/runtime/: CMakeLists.txt  engine.cpp  engine.h  runtime_global_context.cpp  runtime_global_context.h  runtime_header.h
engine/runtime/asset/: CMakeLists.txt  asset.h  asset_manager.cpp  asset_manager.h  assimp_model_loader.cpp  assimp_model_loader.h  audio.h  audio_loader.h  common.h  image_loader.h  mesh.h  miniaudio_audio_loader.cpp  miniaudio_audio_loader.h  model.cpp  model.h  model_loader.h  shader.h  shader_loader.cpp  shader_loader.h  shader_meta.cpp  shader_meta.h  shader_meta_loader.cpp  shader_meta_loader.h  stb_image_loader.cpp  stb_image_loader.h  texture.h  utility.h
engine/runtime/audio/: CMakeLists.txt  audio_clip.h  audio_player.cpp  audio_player.h  audio_system.cpp  audio_system.h  audio_types.h  miniaudio_audio_system.cpp  miniaudio_audio_system.h
engine/runtime/component/: CMakeLists.txt  actor_component.cpp  actor_component.h  camera_component.cpp  camera_component.h  component.h  mesh_component.cpp  mesh_component.h  pointcloud_component.cpp  pointcloud_component.h  primitive_component.cpp  primitive_component.h  scene_component.cpp  scene_component.h
engine/runtime/core/: CMakeLists.txt
engine/runtime/core/base/: CMakeLists.txt  Mesh.cpp  Mesh.h  event.h  graphics_type.h  handle.h  type.h
engine/runtime/core/common/: CMakeLists.txt  common.h  event.h
engine/runtime/core/config/: CMakeLists.txt  global.h.in  path.h
engine/runtime/core/data/: CMakeLists.txt  audioclip.h  mesh.h  shader.h  texture.h
engine/runtime/core/delegate/: CMakeLists.txt  event_dispatcher.h
engine/runtime/core/log/: CMakeLists.txt  log_entry.h  log_system.cpp  log_system.h  logger.cpp  logger.h
engine/runtime/game_framework/: CMakeLists.txt  actor.cpp  actor.h  camera.cpp  camera.h  level.cpp  level.h  mesh_actor.cpp  mesh_actor.h  world.cpp  world.h  world_system.cpp
engine/runtime/graphics/: CMakeLists.txt
engine/runtime/input/: CMakeLists.txt  input_action.h  input_binding.h  input_context.cpp  input_context.h  input_key.h  input_system.cpp  input_system.h
engine/runtime/object/: CMakeLists.txt  object.cpp  object.h
engine/runtime/render/: CMakeLists.txt  aabb.cpp  aabb.h  aabb_debugger.cpp  aabb_debugger.h  directional_shadow_caster.cpp  directional_shadow_caster.h  environment_map.cpp  environment_map.h  frame_buffer.cpp  frame_buffer.h  frustum.cpp  frustum.h  geometry_buffer.h  gizmos.cpp  gizmos.h  mesh_scene_proxy.cpp  mesh_scene_proxy.h  mesh_section.h  mesh_vertex.h  model_loader.cpp  model_loader.h  outline_effect.cpp  outline_effect.h  point_shadow_caster.cpp  point_shadow_caster.h  pointcloud_scene_proxy.cpp  pointcloud_scene_proxy.h  postprocess_context.h  postprocess_effect.h  postprocess_pipeline.cpp  postprocess_pipeline.h  primitive_scene_proxy.cpp  primitive_scene_proxy.h  render_axis.cpp  render_axis.h  render_camera.cpp  render_camera.h  render_context.h  render_light.h  (+38 more)
engine/runtime/test/: render_object_test.cpp  render_object_test.h  vector2f_add_test.cpp  vector2f_multiply_test.cpp  vector2f_subtract_test.cpp  vector3f_add_test.cpp  vector3f_division_test.cpp  vector3f_multiply_test.cpp  vector3f_subtract_test.cpp
engine/runtime/window/: CMakeLists.txt  glfw_window_system.cpp  glfw_window_system.h  window_system.cpp  window_system.h
engine/script/: CMakeLists.txt
engine/script/lua/: CMakeLists.txt  lua_vm.cpp  lua_vm.h
engine/shader/: CMakeLists.txt  axis.frag  axis.fs  axis.vert  axis.vs  box.fs  box.vs  brdf.fs  brdf.vs  cluster.vert  cluster.vs  debug_cubic.fs  debug_cubic.vs  debug_quad.fs  debug_quad.vs  defer_pbr.frag  defer_pbr.fs  defer_pbr.vert  defer_pbr.vs  directionalshadow_mapping_depth.vert  equiretangular_to_cubemap.frag  equiretangular_to_cubemap.vs  irradiance.fs  normal.frag  normal.fs  normal.vert  normal.vs  outline.fs  pbr.frag  pbr.fs  pbr.vs  phong.frag  phong.fs  phong.vs  pointcloud.frag  pointcloud.vert  pointshadow_mapping_depth.fs  pointshadow_mapping_depth.geom  pointshadow_mapping_depth.gs  pointshadow_mapping_depth.vert  (+14 more)
engine/test/: CMakeLists.txt
(+176 files in other folders)
